# =============================================================================
# @file    setup.cfg
# @brief   Package metadata and PyPI configuration
# @author  Michael Hucka <mhucka@caltech.edu>
# @created 2021-10-13
# @license Please see the file named LICENSE in the project directory
# @website https://github.com/caltechlibrary/pyzify
# =============================================================================

[metadata]
name          = pyzify
version       = 0.0.1
description   = Create self-contained executable Python "zipapps" using shiv
author        = Michael Hucka
author_email  = mhucka@caltech.edu
license       = BSD 3-clause
license_files = LICENSE
url           = https://github.com/caltechlibrary/pyzify
# The remaining items below are used by PyPI.
project_urls  =
  Source Code = https://github.com/caltechlibrary/pyzify
  Bug Tracker = https://github.com/caltechlibrary/pyzify/issues
keywords      = Python, applications, zipapp, pyz
classifiers   =
  Development Status :: 4 - Beta
  Environment :: Console
  License :: OSI Approved :: BSD License
  Intended Audience :: Science/Research
  Operating System :: MacOS :: MacOS X
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Operating System :: Unix
  Programming Language :: Python
  Programming Language :: Python :: 3.6
long_description = file:README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = False
python_requires = >= 3.6

[options.entry_points]
console_scripts = 
  pyzify = pyzify.__main__:console_scripts_main
